--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,8 @@
     "illuminate/filesystem": ">=4.2",
     "tedivm/jshrink": "1.0.*"
   },
-  "require-dev": {
-    "phpunit/phpunit": "4.8.*"
-  },
   "minimum-stability": "dev",
+  "prefer-stable": true,
   "extra": {
     "laravel": {
       "providers": [
