--- a/composer.json
+++ b/composer.json
@@ -36,13 +36,13 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Fahedaljghine\\OptionsJs\\OptionsJsServiceProvider"
+        "Fahedaljghine\\Options\\OptionsServiceProvider"
       ]
     }
   },
   "autoload": {
     "psr-4": {
-      "Fahedaljghine\\OptionsJs\\": "src"
+      "Fahedaljghine\\Options\\": "src/"
     }
   }
 }
